testsuite/tests/properties/invalid_lambda_arg_type/then.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Int] = node.do((n: Int) => n)
}
